docker compose 1 pod

--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,18 @@
 		</dependency>
 	</dependencies>
 
-<!--	<build>-->
-<!--		<plugins>-->
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>hu.example.samplerecursiveapp.SampleRecursiveAppApplication</mainClass>
+					<layout>JAR</layout>
+				</configuration>
+			</plugin>
 <!--			<plugin>-->
 <!--				<groupId>org.apache.maven.plugins</groupId>-->
 <!--				<artifactId>maven-compiler-plugin</artifactId>-->
@@ -68,7 +78,7 @@
 <!--					</annotationProcessorPaths>-->
 <!--				</configuration>-->
 <!--			</plugin>-->
-<!--		</plugins>-->
-<!--	</build>-->
+		</plugins>
+	</build>
 
 </project>
