--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,28 @@
-version: '2'
+version: "2"
 
 services:
-  app:
-    image: 'docker-spring-boot-app:latest'
-    build:
-      context: .
-    container_name: app
-    ports:
-      - '8080:8081'
-    depends_on:
-      - db
+  psql-db:
+    image: arm64v8/postgres
+    container_name: psql-db
+    restart: always
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/compose-postgres
-      - SPRING_DATASOURCE_USERNAME=compose-postgres
-      - SPRING_DATASOURCE_PASSWORD=compose-postgres
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-  app2:
-    image: 'docker-spring-boot-app:latest'
-    build:
-      context: .
-    container_name: app
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=1234
+      - POSTGRES_DB=sample_app
     ports:
-      - '8080:8082'
-    depends_on:
-      - db
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/compose-postgres
-      - SPRING_DATASOURCE_USERNAME=compose-postgres
-      - SPRING_DATASOURCE_PASSWORD=compose-postgres
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - '5432:5432'
 
-  db:
-    image: 'arm64v8/postgres'
-    container_name: db
+  recipe:
+    container_name: sample_app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '8081:8080'
     environment:
-      - POSTGRES_USER=compose-postgres
-      - POSTGRES_PASSWORD=compose-postgres
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://psql-db:5432/sample_app
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=1234
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    depends_on:
+      - psql-db
