--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,22 @@ services:
       - '5432:5432'
 
   sample_app_1:
-    container_name: sample_app
+    container_name: sample_app_1
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '8081:8080'
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://psql-db:5432/sample_app
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=1234
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    depends_on:
+      - psql-db
+
+  sample_app_2:
+    container_name: sample_app_2
     build:
       context: .
       dockerfile: Dockerfile
