--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "2"
 
 services:
   psql-db:
-    image: arm64v8/postgres
+    #    image: arm64v8/postgres
+    image: postgres:13.1-alpine
     container_name: psql-db
     restart: always
     environment:
@@ -13,10 +14,8 @@ services:
       - '5432:5432'
 
   sample_app_1:
+    image: sample-app:v1
     container_name: sample_app_1
-    build:
-      context: .
-      dockerfile: Dockerfile
     ports:
       - '8081:8080'
     environment:
@@ -28,12 +27,10 @@ services:
       - psql-db
 
   sample_app_2:
+    image: sample-app:v1
     container_name: sample_app_2
-    build:
-      context: .
-      dockerfile: Dockerfile
     ports:
-      - '8081:8080'
+      - '8082:8080'
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://psql-db:5432/sample_app
       - SPRING_DATASOURCE_USERNAME=admin
